--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
@@ -1,4 +1,5 @@
-﻿@using LAKAPSAGAP.BlazorServer.Pages.Warehouse
+﻿@using LAKAPSAGAP.BlazorServer.Pages.Requesting
+@using LAKAPSAGAP.BlazorServer.Pages.Warehouse
 
 @page "/Warehouse/{id}/Stocks"
 @layout MainLayout
@@ -26,16 +27,16 @@
 				@* Headers *@
 
 				<div class="w-100 d-flex flex-row gap-4 justify-content-between align-items-end text-success">
-					@* <div>
+					<div>
 						<span class="fw-bold rz-color-base-800 fs-4 me-2">Stock Management</span>
-						<span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span>
-						<span class="fw-bold rz-background-color-warning-lighter rz-border-radius-2 rz-color-warning fs-6 px-2 py-1">1000 near expiration stocks</span>
-						<span class="fw-bold rz-background-color-danger-lighter rz-border-radius-2 rz-color-danger fs-6 px-2 py-1">1000 expired</span>
-					</div> *@
+						@* <span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span> *@
+						@* <span class="fw-bold rz-background-color-warning-lighter rz-border-radius-2 rz-color-warning fs-6 px-2 py-1">1000 near expiration stocks</span> *@
+						@* <span class="fw-bold rz-background-color-danger-lighter rz-border-radius-2 rz-color-danger fs-6 px-2 py-1">1000 expired</span> *@
+					</div>
 					<div>
 						<RadzenButton Click="ShowReceiveStockDialog" Icon="add" Text="Receive" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
-						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success"
+						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success" Click="ShowSendReliefDialog"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 					</div>
 				</div>
@@ -69,6 +70,12 @@
 {
 	bool isDataInitialized = false;
 	bool shouldReloadBatchesTable = false;
+
+	async Task ShowSendReliefDialog()
+	{
+		var res = await _dialogService.OpenAsync<SendingDialog>("", options: new() { ShowTitle = false, CloseDialogOnEsc = false, CloseDialogOnOverlayClick = false });
+	}
+
 	async Task ShowReceiveStockDialog()
 	{
 		bool hasChanges = await _dialogService.OpenAsync<ReceiveStockForm>("", new() { { "WarehouseId", id } } ,new() { CssClass = "rz-w-fit-content", ShowTitle = false, CloseDialogOnEsc=false, CloseDialogOnOverlayClick=false});
