--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/StocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/StocksDataGrid.razor
@@ -1,49 +1,42 @@
 ﻿@using static LAKAPSAGAP.Models.ViewModel.ReliefReceivedViewModel
+
 <div class="w-100 d-flex flex-column gap-2 justify-content-between align-items-end text-success">
-	@* <MacroSearch Placeholder="Search Stocks ... " /> *@
-	<div class="d-flex justify-items-start align-items-center gap-2 mt-2">
-		<RadzenDataGrid AllowColumnResize="false" AllowPaging="true" AllowSorting="true" AllowFiltering="false" ShowPagingSummary="true"
-						Data="@_tableData" PageSize="10"
-						Style="border-radius: var(--rz-border-radius-2);">
-			<Columns>
-				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.BatchNumber)" Title="Batch ID"
-									  TextAlign="TextAlign.Left" Width="60px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Id)" Title="Item Code"
-									  TextAlign="TextAlign.Left" Width="80px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Item.Name)" Title="Item"
-									  TextAlign="TextAlign.Left" Width="150px">
-					<Template Context="data">
-						@data.Item.Name
-					</Template>
-				</RadzenDataGridColumn>
-				@* <RadzenDataGridColumn Property="@nameof(StockDetailViewModel.TypeId)" Title="Type"
-									  TextAlign="TextAlign.Left" Width="90px" /> *@
-				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Item.CategoryName)" Title="Category"
-									  TextAlign="TextAlign.Left" Width="90px">
-								  <Template Context="data">
-						@data.Item.CategoryName
-					</Template>
-								  </RadzenDataGridColumn>
-				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Quantity)" Title="Qty"
-									  TextAlign="TextAlign.Left" Width="90px" />
-				<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Item.UoMName)" Title="UoM"
-									  TextAlign="TextAlign.Left" Width="90px">
-								  				  <Template Context="data">
-						@data.Item.UoMName
-					</Template>
-								  </RadzenDataGridColumn>
-				@* <RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}"
-									  TextAlign="TextAlign.Left" Width="90px" /> *@
-				@* <RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
-					<Template Context="data">
-						<RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="edit" Style="border-radius: var(--rz-border-radius-2)" />
-						<RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Style="border-radius: var(--rz-border-radius-2)" />
-					</Template>
-				</RadzenDataGridColumn> *@
-			</Columns>
-			<EmptyTemplate>
-				<p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
-			</EmptyTemplate>
-		</RadzenDataGrid>
-	</div>
+    @* <MacroSearch Placeholder="Search Stocks ... " /> *@
+    <div class="d-flex justify-items-start align-items-center gap-2 mt-2">
+        <RadzenDataGrid AllowColumnResize="false" AllowPaging="true" AllowSorting="true" AllowFiltering="false" ShowPagingSummary="true"
+                        Data="@_tableData" PageSize="10"
+                        Style="border-radius: var(--rz-border-radius-2);">
+            <Columns>
+                <RadzenDataGridColumn Property="@nameof(StockItem.Id)" Title="Item Code"
+                                      TextAlign="TextAlign.Left" Width="80px" />
+                <RadzenDataGridColumn Property="@nameof(StockItem.Name)" Title="Item"
+                                      TextAlign="TextAlign.Left" Width="150px">
+                    <Template Context="data">
+                        @data.Name
+                    </Template>
+                </RadzenDataGridColumn>
+                <RadzenDataGridColumn Property="Category.Name" Title="Category"
+                                      TextAlign="TextAlign.Left" Width="90px">
+                    <Template Context="data">
+                        @data.Category.Name
+                    </Template>
+                </RadzenDataGridColumn>
+                <RadzenDataGridColumn Property="Quantity" Title="Qty"
+                                      TextAlign="TextAlign.Left" Width="90px">
+                    <Template Context="data">
+                        @(data.StockDetailList.Sum(x => x.Quantity))
+                    </Template>
+                </RadzenDataGridColumn>
+                <RadzenDataGridColumn Property="@nameof(StockItem.UoM.Name)" Title="UoM"
+                                      TextAlign="TextAlign.Left" Width="90px">
+                    <Template Context="data">
+                        @data.UoM.Name
+                    </Template>
+                </RadzenDataGridColumn>
+            </Columns>
+            <EmptyTemplate>
+                <p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
+            </EmptyTemplate>
+        </RadzenDataGrid>
+    </div>
 </div>
